<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_text_size"
        android:title="@string/action_text_size"
        android:icon="@drawable/ic_light_action_textsize" />

    <item
        android:id="@+id/action_clear_text"
        android:title="@string/action_clear_text"
        android:icon="@drawable/ic_light_action_trash" />

    <item
        android:id="@+id/action_info"
        android:title="@string/action_info"
        android:icon="@drawable/ic_light_action_info" />

    <item
        android:id="@+id/action_get_started"
        android:title="@string/get_started"
        android:icon="@drawable/ic_action_get_started" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings" />

    <item
        android:id="@+id/action_update_keyboards"
        android:title="@string/action_install_updates"
        android:icon="@drawable/ic_cloud_download"
        app:actionLayout="@layout/update_count_view"/>

    <item
        android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_light_action_share" />

    <!-- Placeholder item to satisfy existing MainActivity references.
         Kept invisible so it does not show in the popup menu. -->
    <item
        android:id="@+id/action_overflow"
        android:title="@string/action_overflow"
        android:visible="false" />
</menu>
